--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -416,6 +416,8 @@
     <string name="wallet_create_transaction_done_button">Done</string>
     <string name="wallet_create_transaction_close_button">Close</string>
 
+    <string name="wallet_receive_lightning_transaction_title">Receive via Lightning</string>
+    <string name="wallet_receive_btc_transaction_title">Receive On-chain</string>
     <string name="wallet_receive_transaction_title">Receive</string>
     <string name="wallet_receive_transaction_receiving_to">Receiving to:</string>
     <string name="wallet_receive_transaction_comment">Comment:</string>
