--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -495,4 +495,9 @@
     <string name="qrcode_scanner_permission_rationale">Primal needs access to your camera to scan QR codes.</string>
     <string name="qrcode_scanner_grant_permission_button">Allow access</string>
     <string name="qrcode_scanner_cancel_button">Cancel</string>
+
+    <string name="accessibility_back_button">Back</string>
+    <string name="accessibility_profile_image">Profile image</string>
+    <string name="accessibility_profile_messages">Messages</string>
+    <string name="accessibility_profile_send_zap">Send zap</string>
 </resources>
