--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -500,5 +500,16 @@
     <string name="accessibility_qr_code">QR Code</string>
     <string name="accessibility_profile_image">Profile image</string>
     <string name="accessibility_profile_messages">Messages</string>
+    <string name="accessibility_send_message">Send the message</string>
+    <string name="accessibility_message_being_sent">Message is being sent</string>
     <string name="accessibility_profile_send_zap">Send zap</string>
+    <string name="accessibility_note_drop_down">Note drop-down</string>
+    <string name="accessibility_profile_drop_down">Profile drop-down</string>
+    <string name="accessibility_media_drop_down">Media drop-down</string>
+    <string name="accessibility_feed_picker">Feed picker</string>
+    <string name="accessibility_add_feed">Add feed</string>
+    <string name="accessibility_remove_feed">Remove feed</string>
+    <string name="accessibility_notification_settings">Notification settings</string>
+    <string name="accessibility_delete_list_item">Delete list item</string>
+    <string name="accessibility_connect_relay">Connect relay</string>
 </resources>
