Create account back Note edit close Wallet settings close and info

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -516,4 +516,6 @@
     <string name="accessibility_zaps_count">Zaps count</string>
     <string name="accessibility_likes_count">Likes count</string>
     <string name="accessibility_repost_count">Repost count</string>
+    <string name="accessibility_close">Close</string>
+    <string name="accessibility_info">Info</string>
 </resources>
