Import photos in New Note

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -518,4 +518,5 @@
     <string name="accessibility_repost_count">Repost count</string>
     <string name="accessibility_close">Close</string>
     <string name="accessibility_info">Info</string>
+    <string name="accessibility_import_photo_from_gallery">Import photo from gallery</string>
 </resources>
