--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -524,4 +524,5 @@
     <string name="accessibility_new_post">New post</string>
     <string name="accessibility_toggle_between_dark_and_light_mode">Toggle between dark and light mode</string>
     <string name="accessibility_copy_content">Copy content</string>
+    <string name="accessibility_warning">Warning</string>
 </resources>
