Implement profile qr code scanner; Fix lightning:lnbc not working on wallet scan; Fix lnbc description misaligned in tx editor;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -341,6 +341,9 @@
 
     <string name="profile_qr_code_profile_tab">Profile</string>
     <string name="profile_qr_code_lightning_tab">Lightning Address</string>
+    <string name="profile_qr_code_scan_qr_code">Scan QR Code</string>
+    <string name="profile_qr_code_view_qr_code">View QR Code</string>
+    <string name="profile_qr_code_scan_qr_code_hint">Scan a user’s QR code to\nfind them on Nostr</string>
 
     <string name="profile_editor_set_banner">set banner</string>
     <string name="profile_editor_change_banner">change banner</string>
